src/effects/thumbnailaside/thumbnailaside.cpp
@@ -149,7 +149,11 @@ void ThumbnailAsideEffect::arrange()
         mwidth = qMax(mwidth, d.window->width());
         pos[ d.index ] = d.window->height();
     }
-    QRect area = effects->clientArea(MaximizeArea, screen, effects->currentDesktop());
+    int effectiveScreen = screen;
+    if (effectiveScreen == -1) {
+        effectiveScreen = effects->activeScreen();
+    }
+    QRect area = effects->clientArea(MaximizeArea, effectiveScreen, effects->currentDesktop());
     double scale = area.height() / double(height);
     scale = qMin(scale, maxwidth / double(mwidth));    // don't be wider than maxwidth pixels
     int add = 0;
